2003-04-04  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.h :
	* kb/kb.cpp :

	  - Cleanup so some of the rules are generated mathematically.

	  - Added inertial and complementary rules.

	  - Added inheritance and transitivity rules.

	  - Now generate_nlp() generates a list of possible atoms.

	* kb/symab.h :
	* kb/symtab.cpp :

	  - Added yet another get() function to give an array of all
	    identifier matching the given type.

	* common/vlad.h :
	* common/list.cpp :

	  - Changed macro VLAD_ADT_MALLOC to include a size parameter.

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Replaced kb::eval() function with a generate_nlp() stub.

2003-04-03  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Added partial eval() function.

	* kb/Makefile.in :
	* kb/sequence.h :
	* kb/sequence.cpp :

	  - New class to store transformation sequences that was previously
	    present in the querytab.

	* kb/kb.cpp :
	* kb/kb.h :
	* kb/querytab.cpp :
	* parser/parser.y :

	  - Took out querytab. Apparently, there is no reason to store
	    the queries. They can be evaluated as they are parsed.

	* common/list.cpp :
	* common/list.h :
	* common/numberlist.cpp :
	* common/numberlist.h :
	* common/stringlist.cpp :
	* common/stringlist.h :
	* kb/consttab.cpp :
	* kb/consttab.h :
	* kb/expression.cpp :
	* kb/expression.h :
	* kb/kb.cpp :
	* kb/querytab.cpp :
	* kb/querytab.h :
	* kb/symtab.cpp :
	* kb/transtab.cpp :
	* kb/transtab.h :
	* parser/parser.y :

	  - Took out debug code from list to keep things simple.


2003-04-01  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.h :
	* kb/kb.cpp :

	  - Added a verify_transref() function.

	  - Added add_querytab() function.

	* kb/querytab.h :
	* kb/querytab.cpp :

	  - Added get_*() functions.

	  - Added debug code.

	* kb/transtab.h :
	* kb/transtab.cpp :

	  - Added get() functions.

	* parser/parser.y :

	  - Now adding queries in kb.
